macros/tests/ui/entry_bad_arg.rs
#![no_main]

use msp430_rt_macros::entry;

#[entry(arg)]
fn main() -> ! {
    loop {}
}
